# hilo_utils

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  cygwin-path.bat
.circleci/: config.yml
.github/workflows/: cmake-single-platform.yml
cmake/: FindLibEv.cmake  FindSystemd.cmake  FindSystemdDaemon.cmake
rrd-writer/: CMakeLists.txt  rrd-writer_main.cpp  rrd-writer_options.cpp  rrd-writer_options.h  rrd_utils.cpp  rrd_utils.h
src/: CDictionary.h  DumpUtils.cpp  DumpUtils.h  HistoryCounterData.cpp  HistoryCounterData.h  HistoryCounterLocal.h  HistoryCounters.cpp  HistoryCounters.h  JsonDumper.h  LibEv.h  LogBase.cpp  LogBase.h  LogMonitor.cpp  LogMonitor.h  LogMonitorEv.h  LogMonitorEvent.h  LogOptions.cpp  LogOptions.h  LogStorage.cpp  LogStorage.h  Rusage.cpp  Rusage.h  ShmBase.cpp  ShmBase.h  ShmBuffer.cpp  ShmBuffer.h  ShmBufferEx.cpp  ShmBufferEx.h  ShmBufferExData.cpp  ShmBufferExData.h  ShmBufferRecord.h  ShmChunks.h  ShmSimple.h  SignalWatcher.cpp  SignalWatcher.h  Status.cpp  Status.h  SysInfoCpu.cpp  SysInfoCpu.h  SysInfoMemory.cpp  (+21 more)
test_main/: BenchTime.cpp  BenchTime.h  CMakeLists.txt  ShmFileBase.h  TestBase.h  test_main.cpp
tests/: CMakeLists.txt  ClockOverride.h  CommonUtilsTest.cpp  Convert.cpp  Dictionary_test.cpp  DumpUtilsTest.cpp  FileUtils_Test.cpp  JsonDumperTest.cpp  Log_test.cpp  ShmBase_Test.cpp  ShmBufferEx_Test.cpp  ShmBuffer_Test.cpp  SysInfo.cpp  TestCounter.cpp  TestCounters.cpp  TestCountersInit.cpp  TestHistoryCounters.cpp  TestTimeUtils.cpp  TestUptime.cpp
utils/: cygwin-install.bat
